--- a/AboutUs.html
+++ b/AboutUs.html
@@ -110,7 +110,7 @@ input[type=text], select, textarea, input[type=email] {
         <h1>PET LOVERS EXHIBITION</h1>
     </div>
     <div class="navbar flex-container">
-        <a class="navItem" href="Home.html">Home</a>
+        <a class="navItem" href="index.html">Home</a>
         <a class="navItem" href="AboutUs.html">About Us</a>
         <a class="navItem" href="ContactUs.html">Contact Us</a>
             
