--- a/AboutUs.html
+++ b/AboutUs.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>About Us</title>
+        <title>Contact Us</title>
         <style type="text/css">
              h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
