--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>Contact Us</title>
         <style type="text/css">
              h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -98,20 +98,20 @@ input[type=text], select, textarea, input[type=email] {
 
 
  <div>   
-<img loading="lazy" src="../images/dog.jpg" alt="Dog" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/cat.jpg" alt="Cat" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/pethorse1.jpg" alt="Horse" style="width: 490px;height:450px;">
-<img loading="lazy" src="../images/bird.jpg" alt="Bird" style="width:490px;height: 450px;">
+<img loading="lazy" src="dog.jpg" alt="Dog" style="width:490px;height: 450px;">
+<img loading="lazy" src="cat.jpg" alt="Cat" style="width:490px;height: 450px;">
+<img loading="lazy" src="pethorse1.jpg" alt="Horse" style="width: 490px;height:450px;">
+<img loading="lazy" src="bird.jpg" alt="Bird" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/humanduck.jpg" alt="Dog" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rat1.jpg" alt="Rat" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/snake.jpg" alt="Snake" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/sheep1.jpg" alt="Sheep" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rabbit.jpg" alt="Rabbit" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/snail.jpg" alt="Snail" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/duck.jpg" alt="Duck" style="width:490px;height: 450px;">
+<img loading="lazy" src="duck.jpg" alt="Duck" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rat.jpg" alt="Rat" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/finehourse.jpg" alt="Horse1" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/cat1.jpg" alt="Catt" style="width:490px;height: 450px;">
+<img loading="lazy" src="cat1.jpg" alt="Catt" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/pethorse2.jpg" alt="Horse2" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/turtle.jpg" alt="Turtile" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rabbitbush.jpg" alt="Rabbit" style="width:490px;height: 450px;">
