--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ input[type=text], select, textarea, input[type=email] {
 <img loading="lazy" src="../images/humanduck.jpg" alt="Dog" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rat1.jpg" alt="Rat" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/snake.jpg" alt="Snake" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/sheep1.jpg" alt="Sheep" style="width:490px;height: 450px;">
+<img loading="lazy" src="images/sheep1.jpg" alt="Sheep" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/rabbit.jpg" alt="Rabbit" style="width:490px;height: 450px;">
 <img loading="lazy" src="../images/snail.jpg" alt="Snail" style="width:490px;height: 450px;">
 <img loading="lazy" src="duck.jpg" alt="Duck" style="width:490px;height: 450px;">
