--- a/index.html
+++ b/index.html
@@ -102,23 +102,23 @@ input[type=text], select, textarea, input[type=email] {
 <img loading="lazy" src="cat.jpg" alt="Cat" style="width:490px;height: 450px;">
 <img loading="lazy" src="pethorse1.jpg" alt="Horse" style="width: 490px;height:450px;">
 <img loading="lazy" src="bird.jpg" alt="Bird" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/humanduck.jpg" alt="Dog" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/rat1.jpg" alt="Rat" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/snake.jpg" alt="Snake" style="width:490px;height: 450px;">
-<img loading="lazy" src="images/sheep1.jpg" alt="Sheep" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/rabbit.jpg" alt="Rabbit" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/snail.jpg" alt="Snail" style="width:490px;height: 450px;">
+<img loading="lazy" src="humanduck.jpg" alt="Dog" style="width:490px;height: 450px;">
+<img loading="lazy" src="rat1.jpg" alt="Rat" style="width:490px;height: 450px;">
+<img loading="lazy" src="snake.jpg" alt="Snake" style="width:490px;height: 450px;">
+<img loading="lazy" src="sheep1.jpg" alt="Sheep" style="width:490px;height: 450px;">
+<img loading="lazy" src="rabbit.jpg" alt="Rabbit" style="width:490px;height: 450px;">
+<img loading="lazy" src="snail.jpg" alt="Snail" style="width:490px;height: 450px;">
 <img loading="lazy" src="duck.jpg" alt="Duck" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/rat.jpg" alt="Rat" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/finehourse.jpg" alt="Horse1" style="width:490px;height: 450px;">
+<img loading="lazy" src="rat.jpg" alt="Rat" style="width:490px;height: 450px;">
+<img loading="lazy" src="finehourse.jpg" alt="Horse1" style="width:490px;height: 450px;">
 <img loading="lazy" src="cat1.jpg" alt="Catt" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/pethorse2.jpg" alt="Horse2" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/turtle.jpg" alt="Turtile" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/rabbitbush.jpg" alt="Rabbit" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/sithourse.jpg" alt="Horse" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/horseff.jpg" alt="Horse" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/rabbit5.jpg" alt="Rabbit" style="width:490px;height: 450px;">
-<img loading="lazy" src="../images/finedog.jpg" alt="Dog" style="width:490px;height: 450px;">
+<img loading="lazy" src="pethorse2.jpg" alt="Horse2" style="width:490px;height: 450px;">
+<img loading="lazy" src="turtle.jpg" alt="Turtile" style="width:490px;height: 450px;">
+<img loading="lazy" src="rabbitbush.jpg" alt="Rabbit" style="width:490px;height: 450px;">
+<img loading="lazy" src="sithourse.jpg" alt="Horse" style="width:490px;height: 450px;">
+<img loading="lazy" src="horseff.jpg" alt="Horse" style="width:490px;height: 450px;">
+<img loading="lazy" src="rabbit5.jpg" alt="Rabbit" style="width:490px;height: 450px;">
+<img loading="lazy" src="finedog.jpg" alt="Dog" style="width:490px;height: 450px;">
 </div>
     
     
