--- a/AboutUs.html
+++ b/AboutUs.html
@@ -135,9 +135,9 @@ input[type=text], select, textarea, input[type=email] {
 </div>
 
 <div class="boxes">
-    <img loading="lazy" src="../images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
-    <img loading="lazy" src="../images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
-    <img loading="lazy" src="../images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
+    <img loading="lazy" src="images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
+    <img loading="lazy" src="images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
+    <img loading="lazy" src="images/dog11.jpg" alt="Dog" style="width:420px;height: 380px;">
     
   </div>
 
